--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 #clockContainer{
     width: 40vw;
     height: 40vw;
-    background-image: url("clock.jpg");
+    background-image: url("Clock.jpg");
     background-repeat: no-repeat;
     margin: auto;
     background-size: 100%;
